# deploy_sensetime

./: subgraph_gop_backbone.onnx
code/: README.md
code/TensorRTPlugin/multiscaleDeformableAttnPlugin/: CMakeLists.txt  README.md  multiscaleDeformableAttn.h  multiscaleDeformableAttnPlugin.cpp  multiscaleDeformableIm2ColCuda.cuh
code/devtools/: README.md
code/model_tools/HORIZON/deployment/: 02_ptq_verify_avg.py  03_onnx_modify.py  03_onnx_modify_horizon_nn.py  05_opt_calib_model.py  05_opt_calib_model_horizon_nn.py  06_split_conv.py  08_lut_debug.py  build_hbm.sh  calib_activation.bash  calib_weight.bash  exchange_onnx.py  get_sensitivity_of_nodes.py  insert_period.py  lr.py  opt_calib_model.bash  ptq_verify_386.bash  ptq_verify_600.bash  qmct_debug.py  run_get_sensitivity.bash
code/model_tools/NVIDIA/deployment/: README.md  check_onnx_trt.py  compare_input_dumps.py  compare_trt_onnx_random.py
code/model_tools/NVIDIA/deployment/cast_onnx/: deploy.sh  extract_subgraph.py  gen_stronly_typed_onnx.py  infer_type.py  insert_cast_after_node.py  insert_cast_before_node.py  node_to_f32.py  onnx_outputs_fp32.py  print_onnx_node_types.py
code/model_tools/NVIDIA/deployment/layer_check/: change_input2polygraphy.py  compare_outputs_cosine.py  dynamic_outputs_fp16_fp32.py  onnx_outputs_max.py  outputs_all_fp16.py  outputs_all_fp32.py  outputs_fp16_fp32.py  select_outputs_fp16.py
code/model_tools/NVIDIA/deployment/layer_check/tool/: convert_opset.py  create_json.py
code/model_tools/NVIDIA/deployment/quant/: quant.sh  script.py
code/model_tools/NVIDIA/profiling/: README.md
code/model_tools/common/: README.md
code/model_tools/common/onnx_tools/: README.md
code/model_tools/common/quantization/: README.md
code/model_tools/common/utilities/: README.md  convert_bin_to_npy.py
code/model_tools/common/validation/: README.md
code/model_tools/docs/: README.md
code/models/j6p/multimodal-3dgop/: README.md  README_dcp.md  petreloss.conf  setup.sh
code/models/j6p/multimodal-3dgop/pcdet/datasets/: __init__.py  dataset.py  dataset_seg.py
code/models/j6p/multimodal-3dgop/pcdet/models/: __init__.py
code/models/j6p/multimodal-3dgop/pcdet/utils/: box_utils.py  ceph_utils.py  common_utils.py  freespace_utils.py  loss_seg_utils.py  loss_utils.py  pose_utils.py  spconv_utils.py
code/models/j6p/multimodal-3dgop/scripts/v1.15.0/: GAC-P643M1ATX_PVBGOP-J6M_volc-BKB_PTQ.yaml  GAC-P643M1ATX_PVBGOP-J6M_volc-GOPHead_PTQ_int16.yaml  GAC-P643M1ATX_PVBGOP-J6M_volc-PVBHead_PTQ_int16.yaml  x_single_qat_calib_vis_splitbkb.sh  x_single_qat_compile_splitbkb.sh  x_single_qat_test_vis_dumpcalibdata_splitbkb.sh
code/models/j6p/multimodal-3dgop/tools/: cos_debug.py  model_check_result.txt  qat_calib.py  qat_calib_test.py  qat_compile.py  qat_compile_vfescatter.py  test.py  test_debug.py  train.py  train_debug.py
code/models/j6p/multimodal-3dgop/tools/eval_utils/: eval_seg_det_utils.py  eval_utils.py  metric.py
code/models/j6p/multimodal-3dgop/tools/onnx_utils/: checkpoint_trans.py  ckpt_process.py  export_model_alldet_dynamic_onnx.py  export_model_alldet_dynamic_onnx_1024x576.py  export_model_alldet_one_onnx.py  export_model_alldet_onnx.py  export_model_alldet_static_onnx.py  export_model_lidarpvbgp_static_onnx_1024x576.py  export_model_onnx.py  onnx_infer.py  onnx_infer_utils.py  onnx_view.py  run_onnx.sh  run_onnx_static.sh  run_onnx_v2.sh  run_onnx_v2_1024x576.sh  run_onnx_v2_lidarpvbgop.sh  timestamp_map.py
code/models/j6p/multimodal-3dgop/tools/scripts/: eval_swint_cam_cp_waymo.sh  train_bevdet_cam_cp_waymo.sh  train_bevdet_dla_cam_cp_waymo.sh  train_bevdet_fs_cp_waymo.sh  train_bevf_cp_waymo_later_fs.sh  train_cp_waymoD1_v1.sh  train_cp_waymo_v1.sh  train_parta2_waymo_v1.sh  train_swint_cam_cp_waymo.sh
code/models/j6p/multimodal-3dgop/tools/scripts_3dgop/: test_dump_data.sh  test_dump_data_padding.sh  train_camera_A02_3dgop_alldet_2V_V1.9.1_No1.sh  train_camera_A02_3dgop_seg_det_2V.sh  train_camera_A02_3dgop_seg_det_2V_V1.7_No1.sh  train_camera_A02_3dgop_seg_det_2V_V1.9.1_No1.sh  train_camera_A02_3dgop_seg_det_2V_V1.9_No1.sh  train_camera_gacbaidu_3dgop_seg_det_2V.sh  train_fusion_A02_3dgop_alldet_2V_V1.9.1_No1.sh  train_fusion_A02_3dgop_seg_det_2V.sh  train_fusion_A02_3dgop_seg_det_2V_V1.7_No1.sh  train_fusion_A02_3dgop_seg_det_2V_V1.9.1_No1.sh  train_fusion_A02_3dgop_seg_det_2V_V1.9_No1.sh  train_fusion_gacbaidu_3dgop_seg_det_2V.sh  train_lidar_A02_3dgop_alldet_2V_V1.9.1_No1.sh  train_lidar_A02_3dgop_seg_det_2V.sh  train_lidar_A02_3dgop_seg_det_2V_V1.7_No1.sh  train_lidar_A02_3dgop_seg_det_2V_V1.7_No2.sh  train_lidar_A02_3dgop_seg_det_2V_V1.9.1_No1.sh  train_lidar_A02_3dgop_seg_det_2V_V1.9_No1.sh  train_lidar_gacbaidu_3dgop_seg_det_2V.sh
code/pipeline_utils/: README.md
code/scripts/: README.md
code/tools/: README.md
multiscaleDeformableAttnPlugin/: CMakeLists.txt  multiscaleDeformableAttnPlugin.cpp  multiscaleDeformableAttnPlugin.h  multiscaleDeformableIm2ColCuda.cuh  multiscaleDeformableIm2ColCuda.cuh1  plugin_performance_test.cpp
(+196 files in other folders)
